// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: directionLight color prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-direction-light"
>
  <article
    className="wonder-material-color"
  >
    <div
      className=""
    >
      <span
        className=""
      >
        color : 
      </span>
      <span
        className=""
      >
        #7df1e8
      </span>
      <button
        className=""
        onClick={[Function]}
      >
        pick color
      </button>
    </div>
  </article>
  <div
    className="light-intensity"
  >
    <article
      className="wonder-light-intensity"
    >
      <article
        className="wonder-float-input"
      >
        <span
          className="component-label"
        >
          Intensity : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </article>
    </article>
  </div>
</article>
`;

exports[`redo_undo: directionLight color prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<article
  className="wonder-direction-light"
>
  <article
    className="wonder-material-color"
  >
    <div
      className=""
    >
      <span
        className=""
      >
        color : 
      </span>
      <span
        className=""
      >
        #1918e8
      </span>
      <button
        className=""
        onClick={[Function]}
      >
        pick color
      </button>
    </div>
  </article>
  <div
    className="light-intensity"
  >
    <article
      className="wonder-light-intensity"
    >
      <article
        className="wonder-float-input"
      >
        <span
          className="component-label"
        >
          Intensity : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </article>
    </article>
  </div>
</article>
`;

exports[`redo_undo: directionLight color prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-direction-light"
>
  <article
    className="wonder-material-color"
  >
    <div
      className=""
    >
      <span
        className=""
      >
        color : 
      </span>
      <span
        className=""
      >
        #1918e8
      </span>
      <button
        className=""
        onClick={[Function]}
      >
        pick color
      </button>
    </div>
  </article>
  <div
    className="light-intensity"
  >
    <article
      className="wonder-light-intensity"
    >
      <article
        className="wonder-float-input"
      >
        <span
          className="component-label"
        >
          Intensity : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </article>
    </article>
  </div>
</article>
`;

exports[`redo_undo: directionLight color prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<article
  className="wonder-direction-light"
>
  <article
    className="wonder-material-color"
  >
    <div
      className=""
    >
      <span
        className=""
      >
        color : 
      </span>
      <span
        className=""
      >
        #7df1e8
      </span>
      <button
        className=""
        onClick={[Function]}
      >
        pick color
      </button>
    </div>
  </article>
  <div
    className="light-intensity"
  >
    <article
      className="wonder-light-intensity"
    >
      <article
        className="wonder-float-input"
      >
        <span
          className="component-label"
        >
          Intensity : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </article>
    </article>
  </div>
</article>
`;

exports[`redo_undo: directionLight color prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<article
  className="wonder-direction-light"
>
  <article
    className="wonder-material-color"
  >
    <div
      className=""
    >
      <span
        className=""
      >
        color : 
      </span>
      <span
        className=""
      >
        #ffffff
      </span>
      <button
        className=""
        onClick={[Function]}
      >
        pick color
      </button>
    </div>
  </article>
  <div
    className="light-intensity"
  >
    <article
      className="wonder-light-intensity"
    >
      <article
        className="wonder-float-input"
      >
        <span
          className="component-label"
        >
          Intensity : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="1"
        />
      </article>
    </article>
  </div>
</article>
`;
